# PANDA3D-EDITOR

./: .gitignore  LICENSE  LICENSE.md  README.md  gizmos.py  main.py  pyproject.toml  requirements.txt  sequence_editor.py  terrainEditor.py  ui_editor.py
saves/test/: test.map
src/: __init__.py  entity_editor.py  main.py  node.py  node_property_model.py  property_grid.py  property_grid_demo.py  scirpt_inspector.py  sequencer.py  terrain.frag.glsl  terrainEditor.py  terrain_control_widget.py  test.py  ui_editor.py
src/QPanda3D/: QPanda3DWidget.py
src/saves/new_project/: new_project.map  preferences.toml
src/saves/new_project/saves/ui/: DirectLabel-pg1_03ddc62d.toml  UI-Canvas_7667597e.toml
src/saves/new_project1/: new_project1.map  preferences.toml  shaders.toml
src/saves/shaders/: shader.toml
